- When using YAML stubs; show the file location of the YAML stub in the user interface (https://github.com/dukeofharen/httplaceholder/pull/340).
- Whenever a YAML file is updated, the change should be reflected in the user interface using web sockets (https://github.com/dukeofharen/httplaceholder/pull/340).

# BREAKING CHANGES
- If you installed HttPlaceholder as .NET tool, you need to have the .NET 8 SDK installed on your machine. If you download the compiled version of HttPlaceholder for your OS, you do not need to have .NET installed so you will notice no changes.
- In an ideal situation, you will not notice any difference. If your OS, however, does not have enough file watches or something else goes wrong so you can't use file watches, you can default to the "classic" situation where the .yml files are checked with every request. You need to provide the "--disableFileWatcher" option when starting HttPlaceholder.

[2023.11.25]
- Fixed small oversight in dark mode in the UI (https://github.com/dukeofharen/httplaceholder/pull/326).
- Fixed bug in the caching of the index.html of the UI (https://github.com/dukeofharen/httplaceholder/pull/327).
- Show IPs when starting the application (https://github.com/dukeofharen/httplaceholder/pull/328).
- HttPlaceholder can now internally make use of "distribution keys". This makes it easier in the future to split stubs, requests, responses etc. in several compartments (https://github.com/dukeofharen/httplaceholder/pull/331).
- Replaced Postman examples with plain cURL examples in documentation, since Postman's scratchpad is being phased out (https://github.com/dukeofharen/httplaceholder/pull/332).
- Scenarios are now saved in the stub source, so the scenarios will survive a restart now (https://github.com/dukeofharen/httplaceholder/pull/333).
- Added Postgres stub storage (https://github.com/dukeofharen/httplaceholder/pull/334).