@@ -15,6 +15,10 @@
 import { defineComponent, type PropType, ref } from "vue";
 import type { FileUploadedModel } from "@/domain/file-uploaded-model";
 import { UploadButtonType } from "@/domain/upload-button-type";
+import { getExtension } from "@/utils/file";
+import { vsprintf } from "sprintf-js";
+import { resources } from "@/constants/resources";
+import { warning } from "@/utils/toast";
 
 export default defineComponent({
   name: "UploadButton",
@@ -37,7 +41,11 @@ export default defineComponent({
       type: String as PropType<UploadButtonType>,
       default: UploadButtonType.Text,
     },
+    allowedExtensions: {
+      type: Array as PropType<string[]>,
+    },
   },
+  emits: ["uploaded", "allUploaded", "beforeUpload"],
   setup(props, { emit }) {
     // Refs
     const uploadField = ref<HTMLElement>();
@@ -48,26 +56,81 @@ export default defineComponent({
         uploadField.value.click();
       }
     };
-    const loadTextFromFile = (ev: any) => {
-      const files: File[] = Array.from(ev.target.files);
-      for (const file of files) {
-        const reader = new FileReader();
-        reader.onload = (e: any) => {
-          const uploadedFile: FileUploadedModel = {
-            filename: file.name,
-            result: e.target.result,
-          };
-          emit("uploaded", uploadedFile);
+
+    const handleSingleUploadedFile = (
+      file: File,
+      onUploaded: (uploadedFile: FileUploadedModel) => void,
+      onError: (error: string) => void,
+    ) => {
+      const allowedExtensions = props?.allowedExtensions ?? [];
+      if (
+        allowedExtensions.length > 0 &&
+        !allowedExtensions.includes(getExtension(file.name))
+      ) {
+        onError(
+          vsprintf(resources.uploadInvalidFiles, [
+            file.name,
+            allowedExtensions.map((e) => `.${e}`).join(","),
+          ]),
+        );
+        return;
+      }
+
+      const reader = new FileReader();
+      reader.onload = (e: any) => {
+        const uploadedFile: FileUploadedModel = {
+          filename: file.name,
+          result: e.target.result,
+          success: true,
         };
-        switch (props.resultType) {
-          case UploadButtonType.Text:
-            reader.readAsText(file);
-            break;
-          case UploadButtonType.Base64:
-            reader.readAsDataURL(file);
-            break;
-          default:
-            throw `Result type for upload not supported: ${props.resultType}`;
+        onUploaded(uploadedFile);
+      };
+      switch (props.resultType) {
+        case UploadButtonType.Text:
+          reader.readAsText(file);
+          break;
+        case UploadButtonType.Base64:
+          reader.readAsDataURL(file);
+          break;
+        default:
+          onError(`Result type for upload not supported: ${props.resultType}`);
+      }
+    };
+    const loadTextFromFile = async (ev: any) => {
+      emit("beforeUpload");
+      const files: File[] = Array.from(ev.target.files);
+      if (props.multiple) {
+        const promises = [];
+        for (const file of files) {
+          promises.push(
+            new Promise((resolve) => {
+              handleSingleUploadedFile(
+                file,
+                (uploadedFile) => {
+                  resolve(uploadedFile);
+                },
+                (error) => {
+                  warning(error);
+                  const result: FileUploadedModel = {
+                    success: false,
+                    filename: file.name,
+                    result: undefined,
+                  };
+                  resolve(result);
+                },
+              );
+            }),
+          );
+        }
+
+        emit("allUploaded", await Promise.all(promises));
+      } else {
+        for (const file of files) {
+          handleSingleUploadedFile(
+            file,
+            (uploadedFile) => emit("uploaded", uploadedFile),
+            warning,
+          );
         }
       }
     };
