@@ -1,4 +1,5 @@
 export interface FileUploadedModel {
+  success: boolean;
   filename: string;
   result: any;
 }
